# autoslurm

./: .gitignore  README.md  TODOS.md  apps_catalog.json  pyproject.toml
.github/workflows/: ci.yml
agent/: 01_context_overview.md  02_llm_interface.md  04_project_map.md  07_acp_actions.md  08_examples.md  09_task_inspect.md  10_task_schedule.md  11_task_submit_monitor.md  12_task_acp_reference.md  cli_reference.md  context_overview.md  experiment_context.md  project_map.md  resource_rules.md  schema.json
agent/examples/: 02_gpu_job.sh  array_job.sh  dependent_jobs.sh  simple_job.sh
docs/: _config.yml  _toc.yml  configuration.md  front_page.md  getting_started.md  project_brain.md  register_an_application.md  register_script.md
docs/agent/: index.md  package_map.md
src/autoslurm/: __init__.py  acp.py  acp_action.json  acp_action.y  context.py  definitions.py  experiment_context.py  job_runner.py  job_to_slurm.py  logs.py  remote_fs.py  run_slurm.py  save_load_jobs.py  storage.py  sync.py  utils.py
src/autoslurm/apps/: agent_context.py  configuration.py  experiment_context.py  logs.py  root.py  scan.py  schedule.py  status.py  submit.py
tests/integration/: mocks.py  test_autoslurm_job_scheduler.py  test_cli_submission.py  test_configuration.py  test_initialize.py  test_job_runner.py  test_job_scheduler.py
tests/scripts/: agent_llm_demo.py  example_python_script.py  hello_script.py
tests/unit/: test_acp.py  test_apps_cli.py  test_bundle_listing.py  test_context.py  test_experiment_context.py  test_job_dependency.py  test_job_to_slurm.py  test_remote_fs.py  test_root_cli.py  test_run_slurm.py  test_save_load_jobs.py  test_scripts_utils.py  test_status_cli.py
