[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "autoslurm"
authors = [
    {name = "Alexandre Adam", email = "alexandre.adam@umontreal.ca"}
    ]
description = "The AutoSlurm project job scheduler designed for HPC cluster scheduling and code reproducibility"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
version = "0.1.0"

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov[all]",
  "pytest-mock",
  "typer",
]
lint = [
  "black",
  "flake8"
]

[project.scripts]
autoslurm-configuration = "autoslurm.apps.configuration:main"
autoslurm-submit = "autoslurm.apps.submit:main"
autoslurm-schedule = "autoslurm.apps.schedule:main"
autoslurm-initialize = "autoslurm.apps.initialize:main"
